# percept-id

./: README.md  data  main.py  pyproject.toml
outputs/: mujoco_scene.xml
outputs/meshes/: 039_mug_0.stl
outputs/meshes/mug_and_zip/039_mug/0/: 039_mug_0.json  039_mug_0_decomposed_template.xml  039_mug_0_template.xml  039_mug_0_v0.json  039_mug_0_v1.json
outputs/meshes/mug_and_zip/039_mug/1/: 039_mug_1.json  039_mug_1_original.stl  039_mug_1_template.xml  039_mug_1_v1.json
outputs/meshes/mug_and_zip/039_mug/10/: 039_mug_10.stl  039_mug_10_template.xml  039_mug_decomposed.xml
outputs/meshes/mug_and_zip/039_mug/11/: 039_mug_11.stl  039_mug_11_template.xml  039_mug_decomposed.xml
outputs/meshes/mug_and_zip/039_mug/12/: 039_mug_12.json  039_mug_12.stl  039_mug_12_template.xml  039_mug_decomposed.xml
outputs/meshes/mug_and_zip/039_mug/13/: 039_mug_1.json  039_mug_1.stl  039_mug_1_template.xml  039_mug_decomposed.xml
outputs/meshes/mug_and_zip/039_mug/2/: 039_mug_2.json  039_mug_2.stl  039_mug_2_template.xml  039_mug_decomposed.xml
outputs/meshes/mug_and_zip/039_mug/3/: 039_mug_3.json  039_mug_3.stl  039_mug_3_template.xml  039_mug_decomposed.xml
outputs/meshes/mug_and_zip/039_mug/4/: 039_mug_4.json  039_mug_4.stl  039_mug_4_template.xml  039_mug_decomposed.xml
outputs/meshes/mug_and_zip/039_mug/5/: 039_mug_5.json  039_mug_5.stl  (+2 more)
scripts/: debug_rack_alignment.py  debug_transforms.py  identify_correct_segments.py  test_icp_with_rot.py  test_mujoco_integration.py  test_multiview_fusion.py  test_point_cloud.py  test_pose_estimation.py  test_rack_icp_with_rot.py  test_sam2.py  test_segmented_point_cloud.py  test_segmented_pointcloud.py  verify_segmentation.py  visualise_segments.py
src/data_loaders/: point_cloud.py  rgbd_loader.py
src/mujoco_integration/: scene_builder.py
src/pose_estimation/: icp_estimator.py
src/segmentation/: sam2_segmentor.py  sam3_text_seg.py
src/utils/: transforms.py
(+197 files in other folders)
