[project]
name = "percept-id"
version = "0.1.0"
description = "Real-to-sim perception pipeline: Multi-view RGB-D to MuJoCo simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.8.0",
    # Core scientific computing
    "numpy>=1.24.0",
    # Computer vision
    "opencv-contrib-python>=4.8.0", # ArUco markers, camera calibration
    "pillow>=10.0.0",
    # Deep learning (PyTorch)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # 3D processing
    "open3d==0.19.0", # Point cloud visualization
    "transforms3d>=0.4.1", # 3D transformations
    # Segmentation & features
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2.git",
    "supervision>=0.20.0", # Segmentation utilities
    # Physics simulation
    "mujoco>=3.0.0",
    # Utilities
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "ultralytics>=8.3.250",
    "ipdb>=0.13.13",
    "clip",
]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
